syntax = "proto3";

package users;

option go_package = "./users";

message Request {
    string username = 1;
    string password = 2;
    string fullName = 3;
}

message Response {
    int32 userId = 1;
}

service UserService {
    rpc CreateUserGrpc (Request) returns (Response) {};
}